--- a/.github/workflows/DeployPY.yml
+++ b/.github/workflows/DeployPY.yml
@@ -71,26 +71,38 @@ jobs:
           echo "FULL_VERSION=$FULL_VERSION" >> $GITHUB_ENV
           echo "IS_LATEST=$IS_LATEST" >> $GITHUB_ENV
 
-      - name: Extract changelog from PR description
-        id: extract_changelog
+      - name: Get PR details and extract changelog
         run: |
-          PR_BODY='${{ github.event.pull_request.body }}'
+          PR_DATA=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.number }}")
           
-          if echo "$PR_BODY" | grep -q "#changelog"; then
-            CHANGELOG=$(echo "$PR_BODY" | sed -n '/#changelog/,$p' | sed '1d' | sed '/^[[:space:]]*$/d')
+          PR_BODY=$(echo "$PR_DATA" | jq -r '.body // ""')
+          
+          echo "🔍 PR Body (first 500 chars):"
+          echo "$PR_BODY" | head -c 500
+          echo ""
+          echo "..."
+          
+          if echo "$PR_BODY" | grep -q -i -E "[@#](changelog|changes|release.notes?)"; then
+            echo "✅ Changelog marker found!"
+            CHANGELOG=$(echo "$PR_BODY" | sed -n -E '/[@#](changelog|changes|release.notes?)/I,$p' | sed '1d' | sed '/^[[:space:]]*$/d')
           else
+            echo "❌ No changelog marker found, using default"
             CHANGELOG="- Update to version ${{ env.FULL_VERSION }}"
           fi
           
           if [ -z "$CHANGELOG" ]; then
+            echo "⚠️  Empty changelog, using default"
             CHANGELOG="- Update to version ${{ env.FULL_VERSION }}"
           fi
           
-          {
-            echo 'CHANGELOG<<EOF'
-            echo "$CHANGELOG"
-            echo 'EOF'
-          } >> $GITHUB_ENV
+          echo "📋 Final changelog:"
+          echo "$CHANGELOG"
+          echo ""
+          
+          CHANGELOG_B64=$(echo "$CHANGELOG" | base64 -w 0)
+          echo "CHANGELOG_B64=${CHANGELOG_B64}" >> $GITHUB_ENV
 
       - name: Update version in pyproject.toml
         id: version
@@ -131,38 +143,48 @@ jobs:
           fi
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ env.FULL_VERSION }}
-          name: "Release ${{ env.FULL_VERSION }}"
-          body: |
-            ## 📋 Changelog
-            
-            ${{ env.CHANGELOG }}
-            
-            ## 🏷️ Tags
-            - **Version**: `${{ env.FULL_VERSION }}`${{ env.IS_LATEST == 'true' && format('{0}- **Latest**: `latest`', '
-            ') || '' }}
-            
-            ## 📦 Docker Package
-            
-            ```bash
-            # Pull specific version
-            docker pull ghcr.io/baptiste-ferrand/template-release:${{ env.FULL_VERSION }}
-            ${{ env.IS_LATEST == 'true' && format('{0}# Pull latest stable{0}docker pull ghcr.io/baptiste-ferrand/template-release:latest', '
-            ') || '' }}
-            ```
-            
-            ## ℹ️ Information
-            
-            - **Source branch**: `${{ github.event.pull_request.head.ref }}`
-            - **Target branch**: `${{ github.base_ref }}`
-            - **Release type**: ${{ env.IS_LATEST == 'true' && '**Stable** 🎯' || '**Pre-production** 🧪' }}
-            - **PR author**: @${{ github.event.pull_request.user.login }}
-          prerelease: ${{ env.IS_LATEST != 'true' }}
-          make_latest: ${{ env.IS_LATEST == 'true' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          CHANGELOG_DECODED=$(echo "$CHANGELOG_B64" | base64 -d)
+          
+          RELEASE_PAYLOAD=$(jq -n \
+            --arg tag_name "${{ env.FULL_VERSION }}" \
+            --arg name "Release ${{ env.FULL_VERSION }}" \
+            --arg changelog "$CHANGELOG_DECODED" \
+            --arg full_version "${{ env.FULL_VERSION }}" \
+            --arg source_branch "${{ github.event.pull_request.head.ref }}" \
+            --arg target_branch "${{ github.base_ref }}" \
+            --arg pr_author "${{ github.event.pull_request.user.login }}" \
+            --arg is_latest_str "$([[ "${{ env.IS_LATEST }}" == "true" ]] && echo "true" || echo "false")" \
+            --argjson prerelease "$([[ "${{ env.IS_LATEST }}" != "true" ]] && echo true || echo false)" \
+            '{
+              tag_name: $tag_name,
+              name: $name,
+              body: ("## 📋 Changelog\n\n" + $changelog + "\n\n## 🏷️ Tags\n- **Version**: `" + $full_version + "`" + (if ($is_latest_str == "true") then "\n- **Latest**: `latest`" else "" end) + "\n\n## 📦 Docker Package\n\n```bash\n# Pull specific version\ndocker pull ghcr.io/baptiste-ferrand/template-release:" + $full_version + (if ($is_latest_str == "true") then "\n# Pull latest stable\ndocker pull ghcr.io/baptiste-ferrand/template-release:latest" else "" end) + "\n```\n\n## ℹ️ Information\n\n- **Source branch**: `" + $source_branch + "`\n- **Target branch**: `" + $target_branch + "`\n- **Release type**: " + (if ($is_latest_str == "true") then "**Stable** 🎯" else "**Pre-production** 🧪" end) + "\n- **PR author**: @" + $pr_author),
+              prerelease: $prerelease,
+              make_latest: $is_latest_str
+            }')
+          
+          echo "🚀 Creating release with payload:"
+          echo "$RELEASE_PAYLOAD" | jq '.'
+          
+          RESPONSE=$(curl -s -X POST \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -H "Content-Type: application/json" \
+            "https://api.github.com/repos/${{ github.repository }}/releases" \
+            -d "$RELEASE_PAYLOAD")
+          
+          echo "🎯 GitHub API Response:"
+          echo "$RESPONSE" | jq '.'
+          
+          if echo "$RESPONSE" | jq -e '.html_url' > /dev/null; then
+            RELEASE_URL=$(echo "$RESPONSE" | jq -r '.html_url')
+            echo "✅ Release created successfully: $RELEASE_URL"
+          else
+            echo "❌ Failed to create release"
+            echo "$RESPONSE"
+            exit 1
+          fi
 
   build-and-deploy-image:
     needs: versioning-and-release
